# brAIn-dump

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
brain_dump/: __init__.py  _indexer.py  _llm.py  _models.py  _parser.py  _server.py  prompt
brain_dump/examples/: example1.md
brain_dump/static/: index.html
examples/: basic_chat.py  basic_server.py
