[project]
name = "brain-dump"
version = "0.0.1"
description = "An offline, private, and secure AI journalling tool."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "ollama",
    "chromadb",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["brain_dump"]

[tool.pytest.ini_options]
pythonpath = ["."]